# ai-textdetection-benchmark-optimization

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/configs/: base_config.yaml
benchmarks/core/: evaluator.py  results_manager.py  utils.py
scripts/: run_baseline.py
